// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`StationSelectDialog > renders correctly if there are multiple factories 1`] = `
<div
  data-v-81f4914e=""
>
  <dialog-toolbar-stub
    color="white"
    data-v-81f4914e=""
    iconcolor="secondary-text"
    title="Select station"
    titleicon="M21,16H3V4H21M21,2H3C1.89,2 1,2.89 1,4V16A2,2 0 0,0 3,18H10V20H8V22H16V20H14V18H21A2,2 0 0,0 23,16V4C23,2.89 22.1,2 21,2Z"
  />
  <v-card-text-stub
    class="d-flex flex-column py-0"
    data-v-81f4914e=""
    tag="div"
  >
    <v-list-item-stub
      border="false"
      class="mb-2 pl-2"
      data-v-81f4914e=""
      density="default"
      disabled="false"
      exact="false"
      height="48px"
      lines="false"
      nav="false"
      replace="false"
      ripple="true"
      slim="false"
      tag="div"
      tile="false"
      variant="text"
    >
      <list-item-contents-stub
        checkbox="false"
        color="primary"
        dark="false"
        data-v-81f4914e=""
        dense="false"
        disabled="false"
        error="false"
        flagcountrycode=""
        icon="M12,17.27L18.18,21L16.54,13.97L22,9.24L14.81,8.62L12,2L9.19,8.62L2,9.24L7.45,13.97L5.82,21L12,17.27Z"
        iconcolor="secondary"
        iconsize=""
        indeterminate="false"
        inputvalue="false"
        isgroupactivatoritem="false"
        issingleselect="false"
        loading="false"
        primaryhighlight=""
        primarytext="Station 1"
        secondaryhighlight=""
        secondarytext=""
        tertiaryhighlight=""
        tertiarytext=""
        tertiarytextclasses=""
      />
    </v-list-item-stub>
    <div
      class="station-select"
      data-v-81f4914e=""
    >
      <double-grouped-selection-stub
        data-v-81f4914e=""
        dense="false"
        density="default"
        groupeditems="[object Object],[object Object]"
        groupitemskey="groupItems"
        grouplabelkey="groupLabel"
        inverted="false"
        isgroupopenkey="isOpen"
        issingleselect="true"
        items="[object Object],[object Object],[object Object]"
        listselectionkey="id"
        listselectiontext="name"
        modelvalue="1"
        required="true"
        showappendonhover="[Function]"
        subgroupitemskey="subGroupItems"
      />
    </div>
  </v-card-text-stub>
  <v-card-actions-stub
    class=""
    data-v-81f4914e=""
    tag="div"
  >
    <v-spacer-stub
      data-v-81f4914e=""
      tag="div"
    />
    <evocon-v-button-stub
      color=""
      data-v-81f4914e=""
      icon=""
      iconcolor=""
      id="cancel-button"
      text="Cancel"
      textclass=""
      type="secondary"
    />
  </v-card-actions-stub>
</div>
`;

exports[`StationSelectDialog > renders correctly if there is only one factory 1`] = `
<div
  data-v-81f4914e=""
>
  <dialog-toolbar-stub
    color="white"
    data-v-81f4914e=""
    iconcolor="secondary-text"
    title="Select station"
    titleicon="M21,16H3V4H21M21,2H3C1.89,2 1,2.89 1,4V16A2,2 0 0,0 3,18H10V20H8V22H16V20H14V18H21A2,2 0 0,0 23,16V4C23,2.89 22.1,2 21,2Z"
  />
  <v-card-text-stub
    class="d-flex flex-column py-0"
    data-v-81f4914e=""
    tag="div"
  >
    <v-list-item-stub
      border="false"
      class="mb-2 pl-2"
      data-v-81f4914e=""
      density="default"
      disabled="false"
      exact="false"
      height="48px"
      lines="false"
      nav="false"
      replace="false"
      ripple="true"
      slim="false"
      tag="div"
      tile="false"
      variant="text"
    >
      <list-item-contents-stub
        checkbox="false"
        color="primary"
        dark="false"
        data-v-81f4914e=""
        dense="false"
        disabled="false"
        error="false"
        flagcountrycode=""
        icon="M12,17.27L18.18,21L16.54,13.97L22,9.24L14.81,8.62L12,2L9.19,8.62L2,9.24L7.45,13.97L5.82,21L12,17.27Z"
        iconcolor="secondary"
        iconsize=""
        indeterminate="false"
        inputvalue="false"
        isgroupactivatoritem="false"
        issingleselect="false"
        loading="false"
        primaryhighlight=""
        primarytext="Station 1"
        secondaryhighlight=""
        secondarytext=""
        tertiaryhighlight=""
        tertiarytext=""
        tertiarytextclasses=""
      />
    </v-list-item-stub>
    <div
      class="station-select"
      data-v-81f4914e=""
    >
      <grouped-selection-stub
        allowedgroupitemids=""
        alloweditemids=""
        data-v-81f4914e=""
        defaultgroupsopen="false"
        dense="false"
        disabled="false"
        disabledvalues=""
        emptyequalsallselected="false"
        flat="false"
        groupidkey="id"
        grouplabelkey="name"
        groups="[object Object],[object Object]"
        groupsorderby="name"
        hasselectalloption="false"
        height="auto"
        hidesearch="false"
        isdropdown="false"
        issearchfocused="false"
        issingleselect="true"
        itemgroupidkey="groupId"
        itemidkey="id"
        itemlabelkey="name"
        items="[object Object],[object Object]"
        itemsecondarytext=""
        itemtertiarytext=""
        itemtertiarytextclasses=""
        loading="false"
        maxwidth=""
        menuopen="false"
        modelvalue="1"
        numericorderby="false"
        required="true"
        search=""
        searchbysecondarytext="false"
        showappendonhover="[Function]"
        someselected="false"
        usecustomsorting="false"
        valid="true"
      />
    </div>
  </v-card-text-stub>
  <v-card-actions-stub
    class=""
    data-v-81f4914e=""
    tag="div"
  >
    <v-spacer-stub
      data-v-81f4914e=""
      tag="div"
    />
    <evocon-v-button-stub
      color=""
      data-v-81f4914e=""
      icon=""
      iconcolor=""
      id="cancel-button"
      text="Cancel"
      textclass=""
      type="secondary"
    />
  </v-card-actions-stub>
</div>
`;

exports[`StationSelectDialog > renders correctly in mobile view 1`] = `
<div
  data-v-81f4914e=""
>
  <dialog-toolbar-stub
    color="white"
    data-v-81f4914e=""
    iconcolor="secondary-text"
    title="Select station"
    titleicon="M21,16H3V4H21M21,2H3C1.89,2 1,2.89 1,4V16A2,2 0 0,0 3,18H10V20H8V22H16V20H14V18H21A2,2 0 0,0 23,16V4C23,2.89 22.1,2 21,2Z"
  />
  <v-card-text-stub
    class="d-flex flex-column py-0"
    data-v-81f4914e=""
    tag="div"
  >
    <v-list-item-stub
      border="false"
      class="mb-2 pl-2"
      data-v-81f4914e=""
      density="compact"
      disabled="false"
      exact="false"
      height="40px"
      lines="false"
      nav="false"
      replace="false"
      ripple="true"
      slim="false"
      tag="div"
      tile="false"
      variant="text"
    >
      <list-item-contents-stub
        checkbox="false"
        color="primary"
        dark="false"
        data-v-81f4914e=""
        dense="true"
        disabled="false"
        error="false"
        flagcountrycode=""
        icon="M12,17.27L18.18,21L16.54,13.97L22,9.24L14.81,8.62L12,2L9.19,8.62L2,9.24L7.45,13.97L5.82,21L12,17.27Z"
        iconcolor="secondary"
        iconsize=""
        indeterminate="false"
        inputvalue="false"
        isgroupactivatoritem="false"
        issingleselect="false"
        loading="false"
        primaryhighlight=""
        primarytext="Station 1"
        secondaryhighlight=""
        secondarytext=""
        tertiaryhighlight=""
        tertiarytext=""
        tertiarytextclasses=""
      />
    </v-list-item-stub>
    <div
      class="station-select station-select--mobile"
      data-v-81f4914e=""
    >
      <double-grouped-selection-stub
        data-v-81f4914e=""
        dense="true"
        density="compact"
        groupeditems="[object Object],[object Object]"
        groupitemskey="groupItems"
        grouplabelkey="groupLabel"
        inverted="false"
        isgroupopenkey="isOpen"
        issingleselect="true"
        items="[object Object],[object Object],[object Object]"
        listselectionkey="id"
        listselectiontext="name"
        modelvalue="1"
        required="true"
        showappendonhover="[Function]"
        subgroupitemskey="subGroupItems"
      />
    </div>
  </v-card-text-stub>
  <v-card-actions-stub
    class="fullscreen-card-actions"
    data-v-81f4914e=""
    tag="div"
  >
    <v-spacer-stub
      data-v-81f4914e=""
      tag="div"
    />
    <evocon-v-button-stub
      color=""
      data-v-81f4914e=""
      icon=""
      iconcolor=""
      id="cancel-button"
      text="Cancel"
      textclass=""
      type="secondary"
    />
  </v-card-actions-stub>
</div>
`;
